# togg-survey

./: .gitignore  README.md  pyproject.toml  template.tex  togg-survey.ipynb  togg-survey.qmd
data/: TOGG T10X Kullanıcı Anketi.csv
docs/: index.html  search.json  togg-survey.html
