[project]
name = "togg-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "nbconvert[webpdf]>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly[kaleido]>=6.2.0",
    "quarto>=0.1.0",
    "wordcloud>=1.9.4",
]
